icon spacing fix

--- a/frontend/src/CSS/homePage.css
+++ b/frontend/src/CSS/homePage.css
@@ -66,7 +66,7 @@
   .card-nav3{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
     padding: 16px;
-    padding-top: 40px;
+    padding-top: 42px;
     text-align: center;
     background-color: #2E9CCA;
     font-size: medium;
@@ -83,7 +83,7 @@
   .card-nav4{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
     padding: 16px;
-    padding-top: 33px;
+    padding-top: 34px;
     text-align: center;
     background-color: #464866;
     font-size: medium;
@@ -130,6 +130,7 @@
   .card-nav7{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
     padding: 16px;
+    padding-top: 22px;
     text-align: center;
     background-color: #464866;
     font-size: medium;
